feat: Register user

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "migration:generate": "npm run build:only && typeorm migration:generate -d ./dist/infra/db.js ./src/migrations/Migration",
     "migration:run": "npm run build:only && typeorm migration:run -d ./dist/infra/db.js",
     "migration:check": "npm run migration:generate -- --check",
+    "schema:generate": "typescript-json-schema --required --noExtraProps ./src/dtos/input.ts '*' --out ./generated-schemas.json",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check .",
     "lint:fix": "eslint --fix .",
     "lint:check": "eslint .",
-    "build": "npm run clean && npm run migration:check && npm run format:check && npm run lint:check && npm run build:only",
-    "start:only": "node dist",
+    "build": "npm run clean && npm run migration:check && npm run schema:generate && npm run format:check && npm run lint:check && npm run build:only",
+    "stop": "kill-port-process 8000 > /dev/null 2>&1 || true",
+    "start:only": "npm run stop && node dist",
     "start": "npm run build && npm run start:only",
-    "test:only": "curl -sSf http://localhost:8000",
+    "test:only": "curl -sSf http://localhost:8000/",
     "test": "start-server-and-test start 8000 test:only"
   },
   "devDependencies": {
@@ -21,11 +23,15 @@
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
+    "kill-port-process": "^3.2.0",
     "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "typescript-json-schema": "^0.61.0"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
+    "bcryptjs": "^2.4.3",
     "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
