--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "experimentalDecorators": true,
     "outDir": "dist",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "inlineSourceMap": true
   },
   "include": ["src/**/*.ts"]
 }
