--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "clean": "rm -rf dist",
     "build:only": "npm run clean && tsc",
     "migration:generate": "npm run build:only && typeorm migration:generate -d ./dist/infra/db.js ./src/migrations/Migration",
-    "migration:run": "npm run build:only && typeorm migration:run -d ./dist/infra/db.js",
+    "migration:run:only": "typeorm migration:run -d ./dist/infra/db.js",
+    "migration:run": "npm run build:only && npm run migration:run:only",
     "migration:check": "npm run migration:generate -- --check",
     "schema:generate": "typescript-json-schema --required --noExtraProps ./src/dtos/input.ts '*' --out ./generated-schemas.json",
     "format:fix": "prettier --write .",
@@ -11,19 +12,18 @@
     "lint:fix": "eslint --fix .",
     "lint:check": "eslint .",
     "build": "npm run clean && npm run migration:check && npm run schema:generate && npm run format:check && npm run lint:check && npm run build:only",
-    "stop": "kill-port-process 8000 > /dev/null 2>&1 || true",
-    "start:only": "npm run stop && node dist",
-    "start": "npm run build && npm run start:only",
-    "test:only": "curl -sSf http://localhost:8000/",
-    "test": "start-server-and-test start 8000 test:only"
+    "start:only": "node dist",
+    "start": "npm run build && npm run migration:run:only && npm run start:only",
+    "test": "curl -sSf http://localhost:8000/",
+    "ci": "start-server-and-test 8000"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
-    "kill-port-process": "^3.2.0",
     "prettier": "^3.0.3",
     "start-server-and-test": "^2.0.1",
     "typescript": "^5.2.2",
@@ -35,6 +35,7 @@
     "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
