--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm install
           npm run migration:run
-          npm test
+          npm run ci
       - name: Approve and merge Dependabot PR
         if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main'
         env:
