--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ci": "start-server-and-test 8000"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.7.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
