--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
