--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ci": "start-server-and-test 8000"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
@@ -31,6 +32,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
