--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
           npm install
           npm run migration:run
           npm run ci
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
       - name: Approve and merge Dependabot PR
         if: github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main'
         env:
