--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-body-parser-error-handler": "^1.0.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.17"
   }
 }
