--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "ci": "start-server-and-test 8000"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@eslint/js": "^9.22.0",
+    "@types/express": "^4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
     "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "newman": "^6.2.1",
@@ -33,6 +33,7 @@
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "typescript-json-schema": "^0.65.1"
   },
   "dependencies": {
