--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "ci": "start-server-and-test 8000"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@eslint/js": "^9.28.0",
+    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/node": "^22.15.30",
     "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
+    "globals": "^16.2.0",
     "newman": "^6.2.1",
     "nyc": "^17.1.0",
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.12",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
     "typescript-json-schema": "^0.65.1"
   },
   "dependencies": {
     "ajv": "^8.17.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "dotenv-extended": "^2.9.0",
-    "express": "^4.21.2",
-    "express-async-errors": "^3.1.1",
+    "express": "^5.1.0",
     "express-body-parser-error-handler": "^1.0.9",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.15.6",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "slugify": "^1.6.6",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.24"
   }
 }
